--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wgt@400;600;900&display=swap");
-
 * {
   box-sizing: border-box;
   margin: 0;
@@ -42,7 +40,7 @@ nav {
   text-transform: uppercase;
 }
 
-b {
+strong {
   font-size: 50px;
   color: #e394a7;
 }
@@ -168,19 +166,20 @@ b {
     right: 50px;
   }
 
-  .container3 {
-    width: 100%;
+  #container2 {
+    min-width: 80%;
+    min-height: 100vh;
     background-color: #fffaf2;
-    display: flex;
-    padding: 10%;
+    padding: 30% 10%;
   }
 
   .card {
-    width: 290px;
-    height: 30%;
+    width: 20%;
+    height: 100%;
     background: #e6d8cb;
     padding: 10px;
     display: flex;
+    justify-content: left;
     flex-wrap: wrap;
     color: #2f3559;
     border-radius: 15px;
@@ -190,6 +189,10 @@ b {
   .title {
     font-weight: 900;
     font-size: 1.7em;
+    color: #2f3559;
+    letter-spacing: 3px;
+    text-decoration: none;
+    text-transform: capitalize;
   }
   
   .tag__name {
