--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -237,6 +237,14 @@ strong {
 
   footer {
     background-color: #e6d8cb;
+    width: 100%;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  footer  p {
     color: #2f3559;
     width: 100%;
     height: 50px;
